@@ -12,11 +12,12 @@ $Database 	= new Database_PDO;
 $User 		= new User ($Database);
 $Tools	 	= new Tools ($Database);
 $Result 	= new Result ();
+$Params		= new Params ($_POST);
 
 # verify that user is logged in
 $User->check_user_session();
 # verify module permissions
-if($_POST['action']=="edit") {
+if($Params->action=="edit") {
 	$User->check_module_permissions ("customers", User::ACCESS_RW, true, true);
 }
 else {
@@ -27,25 +28,24 @@ else {
 $csrf = $User->Crypto->csrf_cookie ("create", "customer");
 
 # validate action
-$Tools->validate_action ($_POST['action'], true);
+$Tools->validate_action ($Params->action, true);
 # fetch custom fields
 $custom = $Tools->fetch_custom_fields('customers');
 
 # ID must be numeric
-if($_POST['action']!="add" && !is_numeric($_POST['id'])) { $Result->show("danger", _("Invalid ID"), true, true); }
+if($Params->action!="add" && !is_numeric($Params->id)) { $Result->show("danger", _("Invalid ID"), true, true); }
 
 # fetch customer for edit / add
-if($_POST['action']!="add") {
+if($Params->action!="add") {
 	# fetch api details
-	$customer = $Tools->fetch_object ("customers", "id", $_POST['id']);
+	$customer = $Tools->fetch_object ("customers", "id", $Params->id);
 	# null ?
 	$customer===false ? $Result->show("danger", _("Invalid ID"), true) : null;
 	# title
-	$title =  ucwords($_POST['action']) .' '._('customer').' '.$customer->title;
+	$title =  ucwords($Params->action) .' '._('customer').' '.$customer->title;
 } else {
 	# generate new code
-	$customer = new StdClass;
-	$customer->id = null;
+	$customer = new Params ();
 	# title
 	$title = _('Add new customer');
 }
@@ -65,9 +65,9 @@ if($_POST['action']!="add") {
 	<tr>
 	    <td><?php print _('Title'); ?></td>
 	    <td>
-	    	<input type="text" name="title" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->title); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Title"); ?>">
+	    	<input type="text" name="title" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->title); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Title"); ?>">
 	        <input type="hidden" name="id" value="<?php print $customer->id; ?>">
-    		<input type="hidden" name="action" value="<?php print escape_input($_POST['action']); ?>">
+    		<input type="hidden" name="action" value="<?php print escape_input($Params->action); ?>">
     		<input type="hidden" name="csrf_cookie" value="<?php print $csrf; ?>">
 	    </td>
        	<td class="info2">* <?php print _('Customer title'); ?></td>
@@ -82,10 +82,10 @@ if($_POST['action']!="add") {
 	<tr>
 	    <td style="vertical-align: top !important"><?php print _('Address'); ?></td>
 	    <td>
-	    	<input type="text" name="address" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->address); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Address"); ?>">
-	    	<input type="text" name="postcode" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->postcode); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Postcode"); ?>">
-	    	<input type="text" name="city" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->city); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("City"); ?>">
-	    	<input type="text" name="state" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->state); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("State"); ?>">
+	    	<input type="text" name="address" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->address); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Address"); ?>">
+	    	<input type="text" name="postcode" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->postcode); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Postcode"); ?>">
+	    	<input type="text" name="city" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->city); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("City"); ?>">
+	    	<input type="text" name="state" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->state); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("State"); ?>">
 
 	    </td>
        	<td class="info2" style="vertical-align: top !important">* <?php print _('Customer address'); ?></td>
@@ -100,9 +100,9 @@ if($_POST['action']!="add") {
 	<tr>
 	    <td style="vertical-align: top !important"><?php print _('Contact details'); ?></td>
 	    <td>
-	    	<input type="text" name="contact_person" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->contact_person); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Contact person"); ?>">
-	    	<input type="text" name="contact_mail" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->contact_mail); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Email address"); ?>">
-	    	<input type="text" name="contact_phone" class="form-control input-sm" value="<?php print $Tools->strip_xss(@$customer->contact_phone); ?>" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Phone"); ?>">
+	    	<input type="text" name="contact_person" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->contact_person); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Contact person"); ?>">
+	    	<input type="text" name="contact_mail" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->contact_mail); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Email address"); ?>">
+	    	<input type="text" name="contact_phone" class="form-control input-sm" value="<?php print $Tools->strip_xss($customer->contact_phone); ?>" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Phone"); ?>">
 
 	    </td>
        	<td class="info2" style="vertical-align: top !important"><?php print _('Customer contact details'); ?></td>
@@ -111,7 +111,7 @@ if($_POST['action']!="add") {
 	<tr>
 	    <td style="vertical-align: top !important"><?php print _('Note'); ?></td>
 	    <td colspan="2">
-	    	<textarea type="text" name="note" class="form-control input-sm" <?php if($_POST['action'] == "delete") print "readonly"; ?> placeholder="<?php print _("Random notes"); ?>"><?php print $Tools->strip_xss(@$customer->note); ?></textarea>
+	    	<textarea type="text" name="note" class="form-control input-sm" <?php if($Params->action == "delete") print "readonly"; ?> placeholder="<?php print _("Random notes"); ?>"><?php print $Tools->strip_xss($customer->note); ?></textarea>
 
 	    </td>
     </tr>
@@ -155,8 +155,8 @@ if($_POST['action']!="add") {
 <div class="pFooter">
 	<div class="btn-group">
 		<button class="btn btn-sm btn-default hidePopups"><?php print _('Cancel'); ?></button>
-		<button class='btn btn-sm btn-default submit_popup <?php if($_POST['action']=="delete") { print "btn-danger"; } else { print "btn-success"; } ?>' data-script="app/admin/customers/edit-submit.php" data-result_div="customerEditResult" data-form='customerEdit'>
-			<i class="fa <?php if($_POST['action']=="add") { print "fa-plus"; } else if ($_POST['action']=="delete") { print "fa-trash-o"; } else { print "fa-check"; } ?>"></i> <?php print escape_input(ucwords(_($_POST['action']))); ?>
+		<button class='btn btn-sm btn-default submit_popup <?php if($Params->action=="delete") { print "btn-danger"; } else { print "btn-success"; } ?>' data-script="app/admin/customers/edit-submit.php" data-result_div="customerEditResult" data-form='customerEdit'>
+			<i class="fa <?php if($Params->action=="add") { print "fa-plus"; } elseif ($Params->action=="delete") { print "fa-trash-o"; } else { print "fa-check"; } ?>"></i> <?php print escape_input(ucwords(_($Params->action))); ?>
 		</button>
 
 	</div>
